styles.css
* {
    font-family: 'Open sans', sans-serif;
    font-weight: bold;
    margin: 0;
    padding: 0;
}

body {
    display: flex;
    flex-direction: row;
}

/* SIDE-BAR */
.side-bar {
    font-size: 12px;
    width: 33%;
    height: 102.5vh;
    background-color: #1f1f3d;
    color: #e9e9f3;
}

h1 {
    padding: 10px;
}

h4 {
    padding: 10px;
    color: #bfbfdd;
}

.border-line {
    border: solid #353567;
    border-width: 2px 0 0 0;
    height: 3px;
    width: 133%;
}

.show-idea-button {
    width: 90%;
    border: 0;
    color: #e9e9f3;
    background-color: #5356a4;
    border-radius: 1px;
    cursor: pointer;
    margin: 10px 10px 20px;
    padding: 5px 15px;
}

/* MAIN */
.form-and-grid {
    width: 100%;
}

form {
    height: 40vh;
    background-color: #a9aad2;
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: space-evenly;
    align-items: flex-start;
    padding-left: 27%;
}

fieldset {
    margin: 0;
    padding: 0;
    border: 0;
}

.title-container,
.body-container {
    font-size: 12px;
    width: 65%;
    display: flex;
    flex-direction: column;
    margin: 0px;
}

.title-input, 
.body-input, 
.search-input,
.search-ideas {
    height: 35px;
    border: 2px solid #5356a4;
    border-radius: 3px;
    font-weight: 300;
}

.body-input {
    height: 75px;
}

.save-button,
.disabled  {
    height: 35px;
    width: 65%;
    background-color:#1f1f3d;
    border: 2px #5356a4;
    border-radius: 3px;
}

.disabled {
    color: #1f1f3d;
    background-color: #EAEAF4;    
    cursor: default;
}

.search-image {
    background-color: #1f1f3d;
    width: 25px;
    height: 22px;
    padding: 7px;
}

.search-ideas {
    width: 65%;
    display: flex;
}

.search-input {
    width: 100%;
    border: 0;
}

/* CARD GRID */
.idea-card-grid {
    height: 60vh;
    background-color: #eaeaf4;
    padding: 10px;
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 10px;
}

.idea-card {
    width: 185px;
    height: 250px;
    border: 1px solid #1f1f3d;
    display: flex;
    background-color: #ffffff;
    flex-direction: column;
    justify-content: space-between;
    align-content: flex-start;
}

.card-nav {
    background-color:#1f1f3d;
    display: flex;
    justify-content: space-between;
    height: 30px;
}

.star-image, 
.delete-image {
    width: 40px;
    cursor: pointer;
}

.card-body {
    margin: 0px;
    padding: 0px 10px;
    font-size: 17px;
}

.idea-body {
    font-weight: 300;
}

.bottom-bar {
    background-color: #5356a4;
    height: 30px;
}

